Made messages over time graph pretty

--- a/resources/msgs_over_time.html
+++ b/resources/msgs_over_time.html
@@ -1,7 +1,15 @@
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="js/msgs_over_time.js"></script>
+<!DOCTYPE html>
+<html>
+	<head>
+  		<link rel="stylesheet" type="text/css" href="css/msgs_over_time.css" />
+  		<title> Message frequency </title>
+	</head>
+    <body>
+        <div id="graph"> </div>
+    </body>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="https://code.highcharts.com/highcharts.js"></script>
+	<script src="js/msgs_over_time.js"></script>
+</html>
 
-<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto">
 
-</div>
